Make sure info is not too wide

--- a/MaterialSkin/HTML/material/html/css/desktop.css
+++ b/MaterialSkin/HTML/material/html/css/desktop.css
@@ -129,6 +129,8 @@ body {
 .np-info-text {
     height:calc((var(--vh, 1vh)*100) - 224px);
     overflow:auto;
+    max-width:1000px;
+    margin:auto;
 }
 
 .np-time {
